@@ -1,0 +1,98 @@
+/*
+ *
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+ * 
+ * Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+ * 
+ * The contents of this file are subject to the terms of either the GNU
+ * General Public License Version 2 only ("GPL") or the Common Development
+ * and Distribution License("CDDL") (collectively, the "License").  You
+ * may not use this file except in compliance with the License. You can obtain
+ * a copy of the License at https://jersey.dev.java.net/CDDL+GPL.html
+ * or jersey/legal/LICENSE.txt.  See the License for the specific
+ * language governing permissions and limitations under the License.
+ * 
+ * When distributing the software, include this License Header Notice in each
+ * file and include the License file at jersey/legal/LICENSE.txt.
+ * Sun designates this particular file as subject to the "Classpath" exception
+ * as provided by Sun in the GPL Version 2 section of the License file that
+ * accompanied this code.  If applicable, add the following below the License
+ * Header, with the fields enclosed by brackets [] replaced by your own
+ * identifying information: "Portions Copyrighted [year]
+ * [name of copyright owner]"
+ * 
+ * Contributor(s):
+ * 
+ * If you wish your version of this file to be governed by only the CDDL or
+ * only the GPL Version 2, indicate your decision by adding "[Contributor]
+ * elects to include this software in this distribution under the [CDDL or GPL
+ * Version 2] license."  If you don't indicate a single choice of license, a
+ * recipient has the option to distribute your version of this file under
+ * either the CDDL, the GPL Version 2 or to extend the choice of license to
+ * its licensees as provided above.  However, if you add GPL Version 2 code
+ * and therefore, elected the GPL Version 2 license, then the option applies
+ * only if the new code is made subject to such option by the copyright
+ * holder.
+ */
+package com.sun.jersey.impl.container.filter;
+
+import com.sun.jersey.api.client.WebResource;
+import com.sun.jersey.api.core.DefaultResourceConfig;
+import com.sun.jersey.api.core.ResourceConfig;
+import com.sun.jersey.impl.AbstractResourceTester;
+import com.sun.jersey.spi.container.ContainerRequest;
+import com.sun.jersey.spi.container.ContainerRequestFilter;
+import java.util.Arrays;
+import java.util.List;
+import javax.ws.rs.GET;
+import javax.ws.rs.Path;
+import javax.ws.rs.QueryParam;
+import javax.ws.rs.core.Context;
+import javax.ws.rs.core.PathSegment;
+import javax.ws.rs.core.UriBuilder;
+import javax.ws.rs.core.UriInfo;
+
+/**
+ *
+ * @author Paul.Sandoz@Sun.Com
+ */
+public class UriModificationFilterTest extends AbstractResourceTester {
+    
+
+    public UriModificationFilterTest(String testName) {
+        super(testName);
+    }
+
+    @Path("/a/b")
+    public static class Resource {
+        @GET
+        public String get(@Context UriInfo ui, @QueryParam("filter") String f) {
+            assertEquals("c", f);
+            return ui.getRequestUri().toASCIIString();
+        }
+    }
+
+    public static class UriModifyFilter implements ContainerRequestFilter {
+        public ContainerRequest filter(ContainerRequest request) {
+            UriBuilder ub = request.getBaseUriBuilder();
+
+            List<PathSegment> pss = request.getPathSegments();
+
+            for (int i = 0; i < pss.size() -1; i++)
+                ub.segment(pss.get(i).getPath());
+            ub.queryParam("filter", pss.get(pss.size() - 1).getPath());
+
+            request.setUris(request.getBaseUri(), ub.build());
+            return request;
+        }
+    }
+
+    public void testWithInstance() {
+        ResourceConfig rc = new DefaultResourceConfig(Resource.class);
+        rc.getProperties().put(ResourceConfig.PROPERTY_CONTAINER_REQUEST_FILTERS,
+                Arrays.asList(new UriModifyFilter()));
+        initiateWebApplication(rc);
+
+        WebResource r = resource("/a/b/c");
+    }
+}
